--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "resend": "^4.0.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.3",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
